# skill_miner

./: .gitignore  LICENSE  README.md  demo.md  pyproject.toml
src/skill_miner/: __init__.py  __main__.py  candidate_extractor.py  cli.py  config.py  session_reader.py  skill_generator.py
tests/: conftest.py  test_carry_forward.py  test_classifier.py  test_cli.py  test_pipeline.py  test_redactor.py  test_reviewer.py  test_scanner.py  test_writer.py
